[package]
name = "mt"
version = "0.1.0"
edition = "2025"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
directories = "6.0.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
